--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -10,48 +10,108 @@
     android:background="#F9F9F9"
     tools:context=".SecondActivity">
 
-    <TextView
-        android:id="@+id/titleText"
-        android:layout_width="wrap_content"
+    <!-- Back Button and Title Row -->
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/titleRow"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
-        android:fontFamily="@font/montserrat"
-        android:text="About Me"
-        android:textColor="#333333"
-        android:textSize="32sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="16dp">
 
+        <!-- Back Button -->
+
+        <!-- Title -->
+        <ImageView
+            android:id="@+id/backButton"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:clickable="true"
+            android:contentDescription="Back Button"
+            android:focusable="true"
+            android:src="@drawable/back_button"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.428" />
+
+        <TextView
+            android:id="@+id/titleText"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/montserrat"
+            android:text="About Me"
+            android:textColor="#333333"
+            android:textSize="32sp"
+            android:textStyle="bold"
+            android:gravity="center"
+            app:layout_constraintStart_toEndOf="@id/backButton"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <!-- Avatar -->
     <ImageView
         android:id="@+id/avatarImage"
-        android:layout_width="243dp"
-        android:layout_height="231dp"
-        android:layout_marginTop="44dp"
+        android:layout_width="250dp"
+        android:layout_height="250dp"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/circle"
         android:clipToOutline="true"
         android:contentDescription="Avatar photo"
         android:scaleType="centerCrop"
         android:src="@drawable/avatar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/titleText"
-        android:background="@drawable/circle"
-        />
+        app:layout_constraintTop_toBottomOf="@id/titleRow" />
 
+    <!-- Description -->
     <TextView
         android:id="@+id/descriptionText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="TextView"
-        android:textSize="18sp"
-        android:lineSpacingExtra="4dp"
         android:fontFamily="@font/montserrat"
+        android:gravity="center_vertical"
+        android:lineSpacingExtra="4dp"
+        android:padding="15dp"
+        android:text="TextView"
         android:textColor="#555555"
-        android:padding="16dp"
-        app:layout_constraintTop_toBottomOf="@id/avatarImage"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:gravity="center_horizontal" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/avatarImage"
+        app:layout_constraintVertical_bias="0.275" />
+
+    <!-- Social Media Icons -->
+    <LinearLayout
+        android:id="@+id/socialMediaIcons"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="20dp"
+        app:layout_constraintTop_toBottomOf="@id/descriptionText"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <!-- GitHub Icon -->
+        <ImageView
+            android:id="@+id/githubIcon"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_marginEnd="16dp"
+            android:contentDescription="GitHub Icon"
+            android:src="@drawable/github" />
+
+        <!-- LinkedIn Icon -->
+        <ImageView
+            android:id="@+id/linkedinIcon"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:contentDescription="LinkedIn Icon"
+            android:src="@drawable/linkedin" />
+    </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
